# ocaml-cordova-plugin-file-opener

./: .travis-ci.sh  META  Makefile  Makefile.conf  README.md  cordova-plugin-file-opener.opam  cordova_file_opener.mli  dune-project  file_opener.mli
.github/workflows/: main.yml
opam/: opam
src/: cordova_file_opener.mli  dune
test/: test.ml
