opam-version: "2.0"
name:         "ocaml-cordova-plugin-file-opener"
maintainer:   "Danny Willems <contact@danny-willems.be>"
authors:       "Danny Willems <contact@danny-willems.be>"
homepage:     "git+https://github.com/dannywillems/ocaml-cordova-plugin-file-opener"
bug-reports:  "git+https://github.com/dannywillems/ocaml-cordova-plugin-file-opener/issues"
dev-repo:     "git+https://github.com/dannywillems/ocaml-cordova-plugin-file-opener"
license:      "LGPL-3.0 with OCaml linking exception"
description: "Binding to the 'file opener' cordova plugin using gen_js_api"
synopsis: "Binding to the 'file opener' cordova plugin using gen_js_api"
version:      "2.0"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.08.0"}
  "dune" {>= "2.8"}
  "gen_js_api"
]
